# dcc-c-compiler

./: CMakeLists.txt
include/libdcc/: asm.hpp  lexer.hpp  libdcc.hpp  parser.hpp  semantic.hpp  tacky.hpp
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  asm.cpp  cmake_install.cmake  lexer.cpp  libdcc.cpp  parser.cpp  semantic.cpp  tacky.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  tests  tests.cpp
test/test/: return_dec.c
tools/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  dcc  dcc.cpp
